Revision history for {{$dist->name}}

{{$NEXT}}

0.08      2024-12-27 09:48:41 -0700
  - Documentation fixes and improvements.
  - More accurately detect signatures for Policy Plicease::ProhibitSignaturesAndAtUnderscore (MITHALDU++, gh#9)

0.07      2024-05-29 20:01:09 -0600
  - (ProhibitUnicodeDigitInRegexp) Treat digit character class /[:digit:]/
    the same as \d (gh#7, Thanks Yoshikazu Sawa)

0.06      2024-05-09 11:08:43 -0600
  - (ProhibitSignaturesAndAtUnderscore) Added new policy (gh#6)

0.05      2024-02-10 05:49:37 -0700
  - (ProhibitSpecificModules) Added new policy (gh#5)
  - Bump required Perl to 5.10.1 (gh#5)
  - Documentation Improvements (gh#5)

0.04      2021-11-09 10:20:14 -0700
  - Documentation fixes (gh#3 scop++)

0.03      2019-12-02 09:18:01 -0700
  - (ProhibitUnicodeDigitInRegexp) Allow \d in a regex if there is an explicit /u

0.02      2019-11-22 10:42:34 -0700
  - (ProhibitUnicodeDigitInRegexp) Do not treat transliterate tr/// as a regexp
  - (ProhibitUnicodeDigitInRegexp) Use PPIx::RegExp to parse regular expressions

0.01      2019-11-22 09:26:22 -0700
  - initial version