@@ -1,10 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - (ProhibitSignaturesAndAtUnderscore) Do not detect @_ inside nested sub (gh#10, gh#11)
 
 0.08      2024-12-27 09:48:41 -0700
   - Documentation fixes and improvements.
-  - More accurately detect signatures for Policy Plicease::ProhibitSignaturesAndAtUnderscore (MITHALDU++, gh#9)
+  - (ProhibitSignaturesAndAtUnderscore) More accurately detect signatures (MITHALDU++, gh#9)
 
 0.07      2024-05-29 20:01:09 -0600
   - (ProhibitUnicodeDigitInRegexp) Treat digit character class /[:digit:]/
